--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,11 +1,11 @@
-.navbar .container-fluid {
-	margin: 0 5rem 1.5rem;
+.container-fluid {
+	padding: 0 5rem;
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 991px) {
-	.navbar .container-fluid {
-		margin: 0 1rem 1.5rem;
+	.container-fluid {
+		padding: 0 1rem;
 	}
 }
 
@@ -20,7 +20,7 @@ nav#breadcrumb {
 
 nav#breadcrumb .breadcrumb {
 	height: 3rem;
-	line-height: 2rem;
+	line-height: 3rem;
 	margin-bottom: 0;
 	font-size: 18px;
 }
@@ -29,11 +29,8 @@ nav#breadcrumb .breadcrumb a {
 	text-decoration: none;
 }
 
-.main.navbar {
-	padding: 0;
-}
-
-.main.navbar .container-fluid {
+.main {
 	padding: 2rem 2rem 0;
 	background-color: #fff;
+	margin-bottom: 1.5rem;
 }
